# geokit

./: Cargo.toml  LICENSE  TODO.md
geokit/: Cargo.toml
geokit/doc/: API_guidelines.md  notes.md
geokit/examples/: crs.rs  default_transformations.rs  simple_coord_conv.rs
geokit/src/: asserts.rs  coord.rs  crs.rs  geodesy.rs  id.rs  lib.rs  operations.rs  tag.rs  transformation.rs
geokit/src/crs/: geocentric.rs  geodetic.rs  geographic.rs  mod.rs  projected.rs  topocentric.rs
geokit/src/cs/: azimuth.rs  cartesian.rs  geodetic.rs  mod.rs  r1.rs  s1.rs
geokit/src/cs/cartesian/: geocentric.rs  mod.rs  projected.rs
geokit/src/geodesy/: ellipsoid.rs  geodesics.rs  geodetic_datum.rs  mod.rs  prime_meridian.rs  xyz_to_llh_100.txt
geokit/src/geodesy/geodesics/: karney.rs  mod.rs  rapp.rs  vincenty.rs
geokit/src/geometry/: empty.rs  mod.rs
geokit/src/geometry/complex/: mod.rs
geokit/src/math/: arithmetic.rs  complex.rs  fp.rs  mod.rs  polynomial.rs  utils.rs
geokit/src/operation/: conversion.rs  mod.rs  transformation.rs
geokit/src/projections/: cyl.rs  mod.rs
geokit/src/providers/: default.rs  mod.rs
geokit/src/quantities/: angle.rs  length.rs  mod.rs  scale.rs
geokit/src/quantity/: angle.rs  length.rs  mod.rs
geokit/src/transformation/: mod.rs
geokit/src/transformations/: geocentric.rs  geographic.rs  mod.rs  projected.rs  xyz.rs
geokit/src/units/: angle.rs  length.rs  mod.rs  scale.rs
geokit/tests/: geodesics.rs  ll_to_utm0.rs  ll_to_xyz.rs  llh_to_xyz.rs  xyz_to_llh_conversion.rs
geokit/tests/data/: README.md  grs80_utm0_restricted.txt  ll_grid.txt  llh_grid.txt  llh_grid_restricted.txt  xyz_grid.txt  xyz_to_llh_10_000.txt
geokit/tests/geodesy/: xyz_to_llh.rs
geokit/tests/input/: mod.rs
geomath/: Cargo.toml
(+23 files in other folders)
