[workspace]

resolver = "2"

members = ["geokit"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
approx = "0.5.1"
nalgebra = "0.32.3"
num = "0.4.1"
regex = "1.10.2"
smol_str = "0.2.1"
thiserror = "1.0.50"
dyn-clone = "1.0.16"
lazy_static = "1.4.0"
derive_more = { version = "1.0.0", features = ['display', 'add', 'add_assign', 'not'] }
