[package]
name = "geokit"
version.workspace = true
edition.workspace = true

[dependencies]
nalgebra = { workspace = true }
num = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
derive_more = { workspace = true }
rand_distr = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
smallvec = { workspace = true }
dyn-clone = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
flate2 = { workspace = true }
